# agent-clinic-code

./: AGENTS.md  README.md
e101/: .env.sample  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  blog.md  blog_draft.md  pyproject.toml  test_cloud_run.py  test_titanium_csv.sh
e101/data/: case_study_urls.txt  exported_case_studies.jsonl
e101/improved_agent/: app.py  main.py
e101/improved_agent/docs/: DESIGN_SPEC.md  a2ui-schema.py  demo_migration_guide.md
e101/improved_agent/evalsets/: eval_config.json  generate_evals.py  research_evals.json
e101/improved_agent/knowledge_base/: agentic_ai_eversana.md  agentic_ai_virtuals_protocol.md  retail_bigquery_morrisons.md  retail_dia.md
e101/improved_agent/scripts/: README-crawler.md  bulk_case_study_crawler.py  manage_vector_search.py
e101/improved_agent/templates/: index.html
e101/original_agent/: main.py
e102/: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  index.html  main.py  pyproject.toml  requirements.txt
e102/Data-Gathering/: download_data.py  team_search.py
e102/data/lineups/: 3869486.json
e102/data/worldcup_2026/: games.csv  groups.csv  stadiums.csv  teams.csv
e102/frontend/: index.html  package-lock.json  package.json
e102/frontend/src/: App.css  App.jsx  main.jsx
e102/src/: __init__.py  championship.py  commentary.py  parser.py  server.py  telemetry.py  wc2026.py
e102/terraform/: main.tf  terraform.tfvars.example  variables.tf
e102/tools/: analyze_events.py  analyze_focused_gaps.py
(+41 files in other folders)
