[project]
name = "e102"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "google-genai>=2.9.0",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-gcp-monitoring>=1.12.0a0",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "python-dotenv>=1.2.2",
    "statsbombpy>=1.19.0",
    "truststore>=0.10.4",
    "uvicorn>=0.49.0",
]
